2008-08-28  David Wetzel <dave@turbocat.de>
	
        * bug #24006 keep-alive is not implemented.
	announce close connections for now
 
2008-08-20  David Wetzel <dave@turbocat.de>
	
	* GSWeb.framework:
	fixed many warnings

2008-07-14  David Wetzel <dave@turbocat.de>
	
	* GSWeb.framework/GSWDirectActionRequestHandler.m:
	set status code in generateNullResponse, reformat, remove some logs

2008-04-20  David Wetzel <dave@turbocat.de>
	
	* GSWeb.framework/GSWApplication.m,
	* GSWeb.framework/GSWComponentRequestHandler.m,
	* GSWeb.framework/GSWServerSessionStore.m,
	* GSWeb.framework/GSWSessionStore.m:
	fixed session (re)creation bug
	code cleanups

2008-05-25  Sebastian Reitenbach  <sebastia@l00-bugdead-prods.de>

	* GSWeb.framework/stacktrace.m (PLATFORM_UNIX): Define
	PLATFORM_UNIX for OpenBSD.

2008-04-20  David Wetzel <dave@turbocat.de>
	
	* GSWeb.framework/GSWApplication.m: cleanups

2008-04-17  David Wetzel <dave@turbocat.de>
	
	* GSWeb.framework/GSWConstants.m: remove comment

2008-04-15  David Wetzel <dave@turbocat.de>
	
	* GSWeb.framework/GSWConstants.m,
	* GSWExtensions.framework/GSWExtWOCompatibility.h
	make WOSessionCreationError work with WO names 
 
2008-04-09  David Wetzel <dave@turbocat.de>
	
	* GSWAdaptors/Apache2/mod_gsw.c: small cleanups
        copy all non-private headers to user

        * GSWeb.framework/GSWBindingNameAssociation.m
        remove unused code

2008-03-31  David Wetzel <dave@turbocat.de>
	
        * GSWAdaptors/Apache2/mod_gsw.c
        make load-balancing work
        add refusing to app status

        * GSWeb.framework/GSWApplication.m
        * GSWeb.framework/GSWRequestHandler.h
        * GSWeb.framework/GSWComponentRequestHandler.h
        * GSWeb.framework/GSWComponentRequestHandler.m
        * GSWeb.framework/GSWResponse.m
        * GSWeb.framework/GSWConstants.h
        * GSWeb.framework/GSWConstants.m
        * GSWeb.framework/GSWPrivate.h
        * GSWeb.framework/GSWApplication.h